--- a/.eslintrc
+++ b/.eslintrc
@@ -1,16 +1,26 @@
 {
   "env": {
     "browser": true,
-      "es2021": true
+    "es2021": true
   },
   "extends": "airbnb-base",
-    "overrides": [
-    ],
-      "parserOptions": {
+  "overrides": [],
+  "parserOptions": {
     "ecmaVersion": "latest"
   },
   "rules": {
-    "no-underscore-dangle": ["error", { "allow": ["_id"] }],
-      "no-console": "off"
+    "no-underscore-dangle": [
+      "error",
+      {
+        "allow": [
+          "_id"
+        ]
+      }
+    ],
+    "no-console": "off",
+    "quotes": [
+      "error",
+      "double"
+    ]
   }
 }
